--- a/PodcastHanteraren/MainForm.resx
+++ b/PodcastHanteraren/MainForm.resx
@@ -316,13 +316,13 @@
     <value>0, 0</value>
   </data>
   <data name="startKnapp.Size" type="System.Drawing.Size, System.Drawing">
-    <value>200, 77</value>
+    <value>200, 56</value>
   </data>
   <data name="startKnapp.TabIndex" type="System.Int32, mscorlib">
     <value>0</value>
   </data>
   <data name="startKnapp.Text" xml:space="preserve">
-    <value>Podcasthanteraren</value>
+    <value>PodcastHanteraren</value>
   </data>
   <data name="&gt;&gt;startKnapp.Name" xml:space="preserve">
     <value>startKnapp</value>
@@ -343,7 +343,7 @@
     <value>0, 0</value>
   </data>
   <data name="panel1.Size" type="System.Drawing.Size, System.Drawing">
-    <value>200, 77</value>
+    <value>200, 56</value>
   </data>
   <data name="panel1.TabIndex" type="System.Int32, mscorlib">
     <value>0</value>
@@ -408,29 +408,6 @@
   <data name="&gt;&gt;panel2.ZOrder" xml:space="preserve">
     <value>1</value>
   </data>
-  <data name="video.Enabled" type="System.Boolean, mscorlib">
-    <value>True</value>
-  </data>
-  <data name="video.Location" type="System.Drawing.Point, System.Drawing">
-    <value>6, 48</value>
-  </data>
-  <data name="video.OcxState" mimetype="application/x-microsoft.net.object.binary.base64">
-    <value>
-        AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj00LjAuMC4w
-        LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACFTeXN0
-        ZW0uV2luZG93cy5Gb3Jtcy5BeEhvc3QrU3RhdGUBAAAABERhdGEHAgIAAAAJAwAAAA8DAAAAtwAAAAIB
-        AAAAAQAAAAAAAAAAAAAAAKIAAAABAwAACAAAAAAABQAAAAAAAADwPwMAAAAAAAUAAAAAAAAAAAAIAAIA
-        AAAAAAMAAQAAAAsA//8DAAAAAAALAP//CAACAAAAAAADADIAAAALAAAACAAKAAAAZgB1AGwAbAAAAAsA
-        AAALAAAACwD//wsA//8LAAAACAACAAAAAAAIAAIAAAAAAAgAAgAAAAAACAACAAAAAAALAAAA8EEAAP8q
-        AAAL
-</value>
-  </data>
-  <data name="video.Size" type="System.Drawing.Size, System.Drawing">
-    <value>680, 440</value>
-  </data>
-  <data name="video.TabIndex" type="System.Int32, mscorlib">
-    <value>0</value>
-  </data>
   <data name="&gt;&gt;video.Name" xml:space="preserve">
     <value>video</value>
   </data>
@@ -465,6 +442,41 @@
     <value>$this</value>
   </data>
   <data name="&gt;&gt;panelDesktopPane.ZOrder" xml:space="preserve">
+    <value>0</value>
+  </data>
+  <data name="video.Enabled" type="System.Boolean, mscorlib">
+    <value>True</value>
+  </data>
+  <data name="video.Location" type="System.Drawing.Point, System.Drawing">
+    <value>6, 48</value>
+  </data>
+  <data name="video.OcxState" mimetype="application/x-microsoft.net.object.binary.base64">
+    <value>
+        AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj00LjAuMC4w
+        LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACFTeXN0
+        ZW0uV2luZG93cy5Gb3Jtcy5BeEhvc3QrU3RhdGUBAAAABERhdGEHAgIAAAAJAwAAAA8DAAAAtwAAAAIB
+        AAAAAQAAAAAAAAAAAAAAAKIAAAABAwAACAAAAAAABQAAAAAAAADwPwMAAAAAAAUAAAAAAAAAAAAIAAIA
+        AAAAAAMAAQAAAAsA//8DAAAAAAALAP//CAACAAAAAAADADIAAAALAAAACAAKAAAAZgB1AGwAbAAAAAsA
+        AAALAAAACwD//wsA//8LAAAACAACAAAAAAAIAAIAAAAAAAgAAgAAAAAACAACAAAAAAALAAAA8EEAAP8q
+        AAAL
+</value>
+  </data>
+  <data name="video.Size" type="System.Drawing.Size, System.Drawing">
+    <value>680, 440</value>
+  </data>
+  <data name="video.TabIndex" type="System.Int32, mscorlib">
+    <value>0</value>
+  </data>
+  <data name="&gt;&gt;video.Name" xml:space="preserve">
+    <value>video</value>
+  </data>
+  <data name="&gt;&gt;video.Type" xml:space="preserve">
+    <value>AxWMPLib.AxWindowsMediaPlayer, AxInterop.WMPLib, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null</value>
+  </data>
+  <data name="&gt;&gt;video.Parent" xml:space="preserve">
+    <value>panelDesktopPane</value>
+  </data>
+  <data name="&gt;&gt;video.ZOrder" xml:space="preserve">
     <value>0</value>
   </data>
   <metadata name="$this.Localizable" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
